--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "axios": "^1.13.2",
     "framer-motion": "^10.12.6",
-    "axios": "^1.4.0"
+    "lucide-react": "^0.555.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
